# SkelGenerator

./: .gitignore  .gitlab-ci.yml  .gitmodules  .gitsubprojects  CMakeLists.txt  README.md
CMake/: CPackConfig.cmake
SkelGenerator/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  Types.h  VRMLReader.cpp  VRMLReader.h  imarisSkel.cpp  imarisskel.h  main.cpp  messagebox.cpp  messagebox.h  vrmlReader-Deprecated.cpp  vrmlReader.cpp
SkelGenerator/NeuronRepresentation/: Dendrite.cpp  Dendrite.h  Neuron.cpp  Neuron.h  SamplePoint.cpp  SamplePoint.h  Section.cpp  Section.h  Segment.cpp  Segment.h  Spine.cpp  Spine.h  SubDendrite.cpp  SubDendrite.h
SkelGeneratorUtil/: CMakeLists.txt  Dendrite.cpp  Dendrite.h  Mesh.cpp  Mesh.h  Neuron.cpp  Neuron.h  SamplePoint.cpp  SamplePoint.h  Section.cpp  Section.h  Spine.cpp  Spine.h  SubDendrite.cpp  SubDendrite.h  Types.h  VRMLReader.cpp  VRMLReader.h
